--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             background-color: #09090b;
             color: #fafafa;
             margin: 0;
+            overflow-x: hidden;
         }
         .glass-effect {
             background: rgba(24, 24, 27, 0.8);
@@ -25,6 +26,20 @@
             background: linear-gradient(to right, #ef4444, #f97316);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+        }
+        /* 修正捲軸樣式 */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #09090b;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #27272a;
+            border-radius: 10px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #3f3f46;
         }
     </style>
 <script type="importmap">
